k8s/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interaction-service
  labels:
    app: interaction-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: interaction-service
  template:
    metadata:
      labels:
        app: interaction-service
    spec:
      containers:
        - name: interaction-service
          image: cauahrq/interaction-service:v3
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: '64Mi'
              cpu: '100m'
            limits:
              memory: '128Mi'
              cpu: '250m'
      restartPolicy: Always
