k8s/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: interaction-service
spec:
  selector:
    app: interaction-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3001
  type: LoadBalancer
